# miniTar

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BitStream.h  CLI.h  Creator.h  Extractor.h  File.h  FileCreator.h  FileDeserializer.h  FileProcessor.h  FileSerializer.h  Huffman.h  HuffmanArchiver.h  MiniTar.h  TarException.h
src/: BitStream.cpp  CLI.cpp  Creator.cpp  Extractor.cpp  File.cpp  FileCreator.cpp  FileDeserializer.cpp  FileProcessor.cpp  FileSerializer.cpp  Huffman.cpp  HuffmanArchiver.cpp  MiniTar.cpp  TarException.cpp
test/: TestBitStream.cpp  TestHuffman.cpp  TestHuffmanArchiver.cpp  doctest.h
